--- a/enrollments-service/build.gradle
+++ b/enrollments-service/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring3x:4.18.2'
     //implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.16.1'
     //testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.12.2'
+    testImplementation "org.mock-server:mockserver-spring-test-listener:5.15.0"
     testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -54,6 +55,10 @@ jacocoTestReport {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
                     //"com/petclinic/**/BillingServiceApplication.class"
+                    "com/champlain/enrollmentsservice/**/StudentServiceClientSynchronous.class",
+                    "com/champlain/enrollmentsservice/**/StudentController.class",
+                    "com/champlain/enrollmentsservice/**/StudentService.class",
+                    "com/champlain/enrollmentsservice/**/StudentServiceImpl.class"
             ])
         }))
     }
